--- a/Ads.none.2
+++ b/Ads.none.2
@@ -1,4 +1,8 @@
 ! 2021-07-05 https://otakudesu.vip
-
 otakudesu.*##.box_item_ads_popup
 
+! 2021-07-06 https://mangaku.pro
+||wp.com/cdn.mangaku.*/*.gif
+||3.bp.blogspot.com/*close-b.png
+||cdn.mangaku.*/gambar/*gif
+mangaku.*##.fndsosmed-social
